--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                         <li>
                             <div class="emirates_airbus">
                                 <a v-on:click="currentPage='airbus'" class="emirates_airbus">
-                                    <img class="emirates_airbus" src="images/Airbus380.jpg" />
+                                    <img class="emirates_airbus" src="images/Airbus380.png" />
                                     <div class="more">
                                         <a v-on:click="currentPage='airbus'" class="more1">En savoir plus ></a>
                                         <a v-on:click="currentPage='airbus'" class="more2">Acheter ></a>
@@ -53,7 +53,7 @@
                         <li>
                             <div class="boeing_787">
                                 <a v-on:click="currentPage='boeing'" class="boeing_787">
-                                    <img class="boeing_787" src="images/Boeing.jpg" />
+                                    <img class="boeing_787" src="images/Boeing.png" />
                                     <div class="more3">
                                         <a v-on:click="currentPage='boeing'" class="more4">En savoir plus ></a>
                                         <a v-on:click="currentPage='boeing'" class="more5">Acheter ></a>
@@ -66,7 +66,7 @@
                         <li>
                             <div class="rafale">
                                 <a v-on:click="currentPage='dassault'" class="rafale">
-                                    <img class="rafale" src="images/RafaleM.jpg" />
+                                    <img class="rafale" src="images/RafaleM.png" />
                                     <div class="more6">
                                         <a v-on:click="currentPage='dassault'" class="more7">En savoir plus ></a>
                                         <a v-on:click="currentPage='dassault'" class="more8">Acheter ></a>
